--- a/configs/sd35.yaml
+++ b/configs/sd35.yaml
@@ -44,5 +44,12 @@ image_every: 100
 #new sigma
 train_sched_steps: 60
 
+# Official SD3 training knobs
+weighting_scheme: logit_normal
+logit_mean: 0.0
+logit_std: 1.0
+mode_scale: 1.29
+precondition_outputs: 1           # match official default
+
 # runtime
 hf_token: "${HUGGINGFACE_TOKEN}"
