--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 #torchvision==0.19.0
 
 # ---- HF / Diffusion stack ----
-diffusers==0.35.1
+diffusers==0.36.0
 transformers==4.55.4
 accelerate==1.10.1
 huggingface_hub>=0.25.2
@@ -36,5 +36,6 @@ hf_transfer>=0.1.6
 protobuf==4.25.3
 sentencepiece>=0.1.99
 tensorboard
-xformer==0.0.28.post1
--f https://download.pytorch.org/whl/cu121
+xformers==0.0.25 --no-deps
+#xformers==0.0.28.post1
+#-f https://download.pytorch.org/whl/cu121
